fixed overflow:hidden in #gallery #item selection animation

--- a/theme/style-bb.css
+++ b/theme/style-bb.css
@@ -163,6 +163,8 @@ width:875px;
   }
 
 .image-box .img {
+	position:relative;
+	top:0px;
 	width:135px;
 
 
